Translations with zod works different so for now i leave it as it is.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,11 +1,6 @@
 {
   "add-post": {
-    "category": "Please select a category.",
-    "title": "title must be at least 2 characters.",
-    "author": "author must be at least 2 characters.",
-    "content": "content must be at least 2 characters.",
-    "newPost": " Add New Post",
-    "formfield": {
+    "formlabel": {
       "category": "Category",
       "title": "Title",
       "author": "Author",
