--- a/locales/nl/translation.json
+++ b/locales/nl/translation.json
@@ -21,5 +21,10 @@
       "enter-content": "Voeg inhoud toe"
     },
     "add-Post": "Voeg bericht toe"
+  },
+
+  "categoryItem": {
+    "edit": "Bewerken",
+    "delete": "Verwijder"
   }
 }
