--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -5,6 +5,7 @@
     "no-posts": "There are no posts in this category.",
     "edit-post": "Edit Post",
     "delete-post": "Delete",
+    "add-post": "Add Post",
     "all": "All",
     "toggle-menu": "Toggle menu",
     "sort-by": "Sort By",
