--- a/locales/nl/translation.json
+++ b/locales/nl/translation.json
@@ -5,6 +5,7 @@
     "no-posts": "geen berichten in deze categorie.",
     "edit-post": "Bericht bewerken",
     "delete-post": "Verwijder",
+    "add-post": "Voeg bericht toe",
     "all": "Alle",
     "toggle-menu": "Wissel menu",
     "sort-by": "Sorteer op",
